--- a/mvc/CI-Platform/CI-Platform-web/CI-Platform-web.csproj
+++ b/mvc/CI-Platform/CI-Platform-web/CI-Platform-web.csproj
@@ -20,6 +20,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.12" />
+    <PackageReference Include="popper.js" Version="1.16.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.0" />
   </ItemGroup>
 
