--- a/mvc/CI-Platform/CI-Platform-web/CI-Platform-web.csproj
+++ b/mvc/CI-Platform/CI-Platform-web/CI-Platform-web.csproj
@@ -36,6 +36,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="wwwroot\images\Upload\" />
     <Folder Include="wwwroot\documents\" />
   </ItemGroup>
 
