--- a/mvc/CI-Platform/CI-Platform-web/CI-Platform-web.csproj
+++ b/mvc/CI-Platform/CI-Platform-web/CI-Platform-web.csproj
@@ -38,6 +38,7 @@
   <ItemGroup>
     <Folder Include="wwwroot\documents\" />
     <Folder Include="wwwroot\images\Upload\Mission\" />
+    <Folder Include="wwwroot\images\Upload\User\" />
     <Folder Include="wwwroot\images\Upload\Story\" />
   </ItemGroup>
 
