--- a/mvc/CI-Platform/CI-Platform-web/appsettings.json
+++ b/mvc/CI-Platform/CI-Platform-web/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server= PCT127\\SQL2017 ; Initial Catalog = CIPlatform; Persist Security Info = False; User ID = sa; Password = Tatva@123; MultipleActiveResultSets = False; Encrypt = False; TrustServerCertificate = False; Connection Timeout= 30 ;"
+  },
+  "JwtSetting": {
+    "Key": "SecretKeyCredentials",
+    "Issuer": "https://localhost:44350",
+    "Audience": "https://localhost:44350"
   }
 }
