changes in project

--- a/mvc/CI-Platform/CI-Platform-web/CI-Platform-web.csproj
+++ b/mvc/CI-Platform/CI-Platform-web/CI-Platform-web.csproj
@@ -37,4 +37,20 @@
     <Folder Include="wwwroot\images\Upload\Story\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="Messages.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Messages.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Messages.resx">
+      <CustomToolNamespace>PublicResXFileCodeGenerator</CustomToolNamespace>
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Messages.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
